fix: adjustment for 1024px width layout shifting

--- a/src/app/simulation/simulation.component.scss
+++ b/src/app/simulation/simulation.component.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
     .ordered-touch {
         display: flex;
         flex-flow: column;
